--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,57 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Virtual environments
+.venv
+venv/
+ENV/
+env/
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
-*.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
 
-# env files (can opt-in for committing if needed)
-# .env*
+# Logs
+*.log
+logs/
 
-# vercel
-.vercel
+# Sessions (if using file persistence)
+sessions/
+*.db
+*.sqlite
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Environment
+.env
+.env.local
+.env.*.local
